Project

General

Profile

Actions

Bug #23068

closed

TestLibRBD.RenameViaLockOwner may still fail with -ENOENT

Added by Mykola Golub about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://qa-proxy.ceph.com/teuthology/trociny-2018-02-20_16:16:39-rbd-wip-mgolub-testing-distro-basic-smithi/2207758/teuthology.log

2018-02-20T16:44:47.460 INFO:tasks.workunit.client.0.smithi001.stdout:/build/ceph-13.0.1-2052-g2511947/src/test/librbd/test_librbd.cc:4586: Failure
2018-02-20T16:44:47.461 INFO:tasks.workunit.client.0.smithi001.stdout:      Expected: 0
2018-02-20T16:44:47.461 INFO:tasks.workunit.client.0.smithi001.stdout:To be equal to: rbd.rename(ioctx, name.c_str(), new_name.c_str())
2018-02-20T16:44:47.461 INFO:tasks.workunit.client.0.smithi001.stdout:      Which is: -2
2018-02-20T16:44:47.466 INFO:tasks.workunit.client.0.smithi001.stdout:[  FAILED  ] TestLibRBD.RenameViaLockOwner (2510 ms)

It was believed to be fixed in #18435, and that fix properly filters out the error coming from the possible race, but the request still completes with non-filtered error code.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #23152: luminous: TestLibRBD.RenameViaLockOwner may still fail with -ENOENTResolvedPrashant DActions
Copied to rbd - Backport #23153: jewel: TestLibRBD.RenameViaLockOwner may still fail with -ENOENTResolvedPrashant DActions
Actions #2

Updated by Mykola Golub about 6 years ago

  • Subject changed from TestLibRBD.RenameViaLockOwner still may fail with -ENOENT to TestLibRBD.RenameViaLockOwner may still fail with -ENOENT
Actions #3

Updated by Jason Dillaman about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23152: luminous: TestLibRBD.RenameViaLockOwner may still fail with -ENOENT added
Actions #5

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23153: jewel: TestLibRBD.RenameViaLockOwner may still fail with -ENOENT added
Actions #6

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF