librbd: make rename request complete with filtered code

Fixes: http://tracker.ceph.com/issues/23068
Signed-off-by: Mykola Golub <mgolub@suse.com>
(cherry picked from commit 9d6fc30e54f4c0ecfac4e9a907d818e1e7665b96)